package edu.fiuba.algo3.aux;


public enum Posicion {
    CUERPO_A_CUERPO,
    A_DISTANCIA,
    ASEDIO
}