package edu.fiuba.algo3.clases;

import java.util.ArrayList;
import java.util.List;
import java.util.stream.Collectors;


public class Seccion {
  private ArrayList<Unidad> unidadesJugadas;
  private Jugador jugador;
  private Posicion tipo;

  public Seccion(Posicion posicion) {
    this.unidadesJugadas = new ArrayList<>();
    this.tipo = posicion;
  }

  public Jugador getJugador() {
    return this.jugador;
  }

  public Boolean colocarUnidad(Unidad unidad) {
    if (unidad.getPosicion() != this.tipo) {
      return false;
    }
    this.unidadesJugadas.add(unidad);
    return true;
  }

  public int getCantUnidades() {
    return unidadesJugadas.size();
  }

  public ArrayList<Unidad> getUnidadesSeccion() {
    return this.unidadesJugadas;
  }

  public int obtenerPuntaje() {
    int total = 0;
    for (Unidad unidad : unidadesJugadas) {
      total += unidad.obtenerPuntosBase();
    }
    return total;
  }

  public void aplicarEfectoNieve(){
    for(Unidad unidad : this.unidadesJugadas){
      unidad.modificarPuntos(1);
    }
  }

  public void desactivarEfectoNieve(){
    for(Unidad unidad : this.unidadesJugadas){
      unidad.reiniciarPuntos();
    }
  }

  public void aplicarEfectoTierraArrasada(Jugador jugador){
    int maxPuntos = this.unidadesJugadas.stream()
            .mapToInt(Unidad::getPuntosModificados)
            .max()
            .orElse(0);

    List<Unidad> aEliminar = this.unidadesJugadas.stream()
            .filter(u -> u.getPuntosModificados() == maxPuntos)
            .collect(Collectors.toList());

    for (Unidad unidad : aEliminar) {
      this.unidadesJugadas.remove(unidad);
      jugador.descartarCarta(unidad);
    }
  }

}
